--- a/src/main/resources/templates/kanban/hl_demo.html
+++ b/src/main/resources/templates/kanban/hl_demo.html
@@ -216,14 +216,16 @@ li {
 					<div class="div-boder">
 						<span>质量</span>
 					</div>
-					<div class="div-boder" style="background-color:#00FF33;height:30px;margin-top:35px;margin-left:5px;width:30px;"></div>
+					<div  style="background-color:#00FF33;height:30px;margin-top:35px;margin-left:5px;width:30px;float:left;"></div>
+				<div style="height:30px;margin-top:40px;"><span>正常</span></div>
 				</div>
 				<div class="div-boder"
 					style="float: left; width: 45%; text-align: center;">
 					<div class="div-boder">
 						<span>设备</span>
 					</div>
-					
+					<div  style="background-color:#FFFF33;height:30px;margin-top:35px;margin-left:5px;width:30px;float:left;"></div>
+					<div style="height:30px;margin-top:40px;"><span></span></div>
 				</div>
 			</div>
 			<div class="container-left-bottom div-boder">
