--- a/src/main/resources/static/layuiadmin/style/admin.css
+++ b/src/main/resources/static/layuiadmin/style/admin.css
@@ -561,7 +561,7 @@ html {
 	border-bottom: 1px solid #f6f6f6;
 	box-sizing: border-box;
 	/* background-color: #fff */
-	background-color: #009688 
+	background-color: #438eb9 
 	/* background-color: #1E9FFF */
 }
 
