--- a/src/main/resources/templates/kanban/hl_area.html
+++ b/src/main/resources/templates/kanban/hl_area.html
@@ -33,8 +33,8 @@ body {
 }
 
 .div_chart {
-	width: 800px;
-	height: 400px;
+	width: 100%;
+	height: 60px;
 	/*border: 1px solid red;*/
 	margin-top: 2px;
 	text-align: center;
