--- a/src/main/resources/templates/kanban/hl_area_50cun.html
+++ b/src/main/resources/templates/kanban/hl_area_50cun.html
@@ -52,7 +52,7 @@
 
     <div class="data_main">
         <div class="main_left fl">
-            <div class="left_1 t_btn6" style="cursor: pointer;height:285px;">
+            <div class="left_1 t_btn6" style="cursor: pointer;height:210px;">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
@@ -77,9 +77,9 @@
                     <img src="picture/t_1.png" alt="">
                     产能预警
                 </div>
-                <div  id="pro_warn" class="chart" style="width:100%;height: 280px;"></div>
+                <div  id="pro_warn" class="chart" style="width:100%;height: 260px;"></div>
             </div>
-            <div class="left_2 " style="cursor: pointer;height:195px;margin-bottom:20px;">
+            <div class="left_2 " style="cursor: pointer;height:120px;margin-bottom:20px;">
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
                     <i class="l_t_line"></i> 
@@ -164,7 +164,7 @@
             </div>
         </div>
         <div class="main_center fl">
-            <div class="center_text" style="position: relative;height:500px;">
+            <div class="center_text" style="position: relative;">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
@@ -218,10 +218,10 @@
                 <!-- 法 -end-->
                 <!-- 环 -start-->
                 <div class="chart_main div_none"  id="div_li_huan">
-                    <img id="div_li_huan_img" src="" style="width:100%;height: 498px;padding:10px;padding-top:20px;">
+                    <img id="div_li_huan_img" src="" style="width:100%;height: 348px;padding:10px;padding-top:20px;">
                 </div>
                 <!-- 环  -end-->
-                <div class="chart_main " style="width:666px;height: 500px;margin:10px;color:#fff" id="div_li_ce">3</div>
+                <div class="chart_main " style="width:666px;height: 350px;margin:10px;color:#fff" id="div_li_ce">3</div>
             </div>
             <div class="center_text1" style="position: relative;width:1095px;">
                 <!--左上边框-->
@@ -316,7 +316,7 @@
             </div>
         </div>
         <div class="main_right fr">
-            <div class="right_1" style="height:500px">
+            <div class="right_1" style="height:350px">
                 <!--左上边框-->
                 <div class="t_line_box">
                     <i class="t_l_line"></i> 
