--- a/src/main/resources/static/kanban/css/index.css
+++ b/src/main/resources/static/kanban/css/index.css
@@ -104,7 +104,8 @@
     /* width: calc(100% - 40px); */
     width: calc(100% - 30px);
     /* margin-bottom: 20px; */
-    height: 615px;
+    /* height: 615px; */
+    height: 815px;
     /* margin-left: 20px; */
 }
 .data_content .data_main .main_left{
@@ -476,7 +477,9 @@
 }
 .main_table tbody tr:nth-child(1),
 .main_table tbody tr:nth-child(3),
- .main_table tbody tr:nth-child(5){
+ .main_table tbody tr:nth-child(5),
+ .main_table tbody tr:nth-child(7),
+ .main_table tbody tr:nth-child(9){
     background-color: #072951;
     box-shadow:-10px 0px 15px #2C58A6 inset,   /*◊Û±ﬂ“ı”∞*/
     10px 0px 15px #2C58A6 inset;  /*”“±ﬂ“ı”∞*/
@@ -581,7 +584,7 @@ li:hover{
 .yellow-legend{
     height: 8px;
     width: 30px;
-    background-color: yellow;
+    background-color: #D3D3D3;
     border-radius: 5px;
     color:rgba(0,0,0,0);
 }
@@ -597,7 +600,7 @@ li:hover{
 .speed-num{
     width:70px;
     display: block;
-    height: 13px;
+    height: 17px;
     border-radius: 5px;
 }
 
